# ai-file-organizer

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
src/file_organizer/: __init__.py  cli.py  config.py  llm.py  models.py  organizer.py
tests/: conftest.py  test_cli.py  test_config.py  test_organizer.py
